# aaemu-launcher-rust

./: Cargo.toml  README.md  app.manifest  app.rc  app.res  build.rs  plaa-iis-0325164928.pfx  sign.ps1
src/: aes.rs  business_logic.rs  cipher.rs  db_check.rs  download.rs  main.rs  pak.rs  protocol.rs  regedit.rs  resources.rs  site_link_url.rs  system_config.rs  task.rs  trion_1_2.rs  uac.rs  web_site.rs  win.rs  win32api.rs  win_main.rs  window.rs
src/pak/: aa_pak.rs  aa_pak_file_format_reader.rs  aa_pak_file_header.rs  aa_pak_file_info.rs  aa_pak_loading_progress_type.rs  packer_sub_stream.rs  pak_file_type.rs
src/win_main/: button_exit.rs  button_start.rs  button_upgrade.rs  progress_upgrade.rs
ui/: app-window.slint
